--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ header .content{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#FCFCFC',GradientType=1 ); /* ie6-9 */
 }
 
+header .content img{
+	width: 60px;
+	height: 110px;
+}
 /*================================================ NAVIGATION Bar ================================================*/
 nav ul li a,
 #work #projects .project a{
@@ -79,6 +83,11 @@ nav ul li a:hover,
 main{
 	max-width: 1024px;
 	margin: 1rem auto;
+}
+
+main #intro img{
+	width: 100%;
+	height: 50%;
 }
 
 main #intro #enjoy{
